# hacash-wallet

./: .gitignore  Cargo.toml  README.md
.github/: fullnode-revision
.github/workflows/: ci.yml  release-desktop.yml  release-mobile.yml
apps/desktop/: dev.ps1  generate-app-icons.ps1  index.html  package.json  rebuild-desktop.bat  run.ps1  sync-app-version.ps1  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  launchpad.json
apps/desktop/src-tauri/icons/: icon-manifest.json  icon.icns
apps/desktop/src-tauri/permissions/: wallet.toml
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  platform.rs  state.rs  whisper_relay.rs
apps/mobile/: BUILD-ANDROID.bat  Open Wallet.bat  README.md  apply-android-patches.ps1  build-android.ps1  build-ios.sh  cargo-android-release.bat  check-logo-size.ps1  create-android-keystore.ps1  (+43 more)
apps/mobile/src-tauri/: Cargo.toml  Info.plist  android-backup-rules.xml  android-data-extraction-rules.xml  android-file-provider-paths.xml  android-network-security.xml  android-permissions.xml  android-queries.xml  build.rs  tauri.conf.json
apps/mobile/src-tauri/android-src/org/hacash/wallet/mobile/: ApkInstaller.kt  BackupExportHelper.kt  BackupFileHelper.kt  BiometricSecretStore.kt  WalletNativePlugin.kt
apps/mobile/src-tauri/capabilities/: default.json  launchpad.json  mobile.json
apps/mobile/src-tauri/icons/: icon-manifest.json  icon.icns
apps/mobile/src-tauri/icons/android/drawable/: splash_icon.xml
apps/mobile/src-tauri/icons/android/mipmap-anydpi-v26/: ic_launcher_round.xml
apps/mobile/src-tauri/icons/android/values/: colors.xml  themes.xml
apps/mobile/src-tauri/permissions/: wallet.toml
apps/mobile/src-tauri/src/: biometric_store.rs  lib.rs  main.rs  platform.rs
crates/dust-whisper/: Cargo.toml
crates/dust-whisper/src/: client.rs  crypto.rs  error.rs  http_util.rs  lib.rs  messenger_auth.rs  messenger_client.rs  messenger_relay.rs  protocol.rs  relay.rs
crates/dust-whisper/tests/: live_relay_check.rs  relay_roundtrip.rs  ssrf_guard.rs
crates/l2-fast-pay-hub/: Cargo.toml
crates/l2-fast-pay-hub/src/: amount.rs  api.rs  channel_id.rs  error.rs  fee_payer.rs  hub_signer.rs  lib.rs  node.rs  routing.rs  server.rs  state.rs
crates/l2-fast-pay-hub/src/wire/: build.rs  chain_payment.rs  documents.rs  hash.rs  mod.rs  prove_body.rs  satoshi_var.rs  sign.rs
crates/l2-fast-pay-hub/tests/: hub_roundtrip.rs  sign_roundtrip.rs  wire_roundtrip.rs
crates/wallet-core/: Cargo.toml
crates/wallet-core/examples/: e2e_asset_preflight.rs  e2e_asset_prices.rs  e2e_fund_only.rs  e2e_fund_quantum.rs  e2e_send_test.rs  e2e_type4_send.rs
crates/wallet-core/src/: account.rs  address.rs  airgap.rs  assets.rs  bills.rs  biometric_unlock.rs  btc_send.rs  channel.rs  dapp.rs  dust_whisper.rs  error.rs  fast_pay.rs  hacd_send.rs  hardware.rs  hip23.rs  history.rs  http_client.rs  kdf.rs  l1_fee.rs  l2_bill.rs  l2_hub.rs  lib.rs  messenger.rs  messenger_crypto.rs  node.rs  node_capabilities.rs  node_discovery.rs  paths.rs  payment.rs  prices.rs  privacy.rs  protocol_init.rs  quantum.rs  quantum_vault.rs  secure_mem.rs  security.rs  send_options.rs  settings.rs  test_support.rs  tx_binding.rs  (+5 more)
crates/wallet-core/src/wallet/: dapp_service.rs  network_binding.rs
crates/wallet-core/tests/: audit_backup_import.rs  audit_channel.rs  audit_dust_whisper.rs  audit_hip23_matrix.rs  audit_milestone_airgap.rs  audit_milestone_hw.rs  audit_milestone_privacy.rs  audit_proptest.rs  audit_quantum_smoke.rs  audit_security_policy.rs  audit_storage_integrity.rs  audit_tier0_export_leak.rs  audit_tier0_parser_fuzz.rs  audit_tier0_policy_hardening.rs  audit_tier0_signing_bind.rs  audit_tier0_unicode_secrets.rs  audit_tier0_unlock_guard.rs  audit_tier0_vault_mutation.rs  audit_tier0_webauthn_strict.rs  audit_vault_crypto.rs  audit_wallet_lifecycle.rs  audit_webauthn_adversarial.rs  istanbul_airgap_regression.rs  istanbul_release_gate.rs  node_capabilities_client.rs  stress_channel_parallel.rs  stress_hip23_bulk.rs  stress_proptest_heavy.rs  stress_storage_bulk.rs  stress_vault_bulk.rs  stress_wallet_cycles.rs  stress_webauthn_flood.rs
crates/wallet-core/tests/common/: mod.rs
crates/wallet-tauri-common/: Cargo.toml
crates/wallet-tauri-common/src/: android_native.rs  backup_android.rs  backup_commands.rs  commands.rs  dapp_approval.rs  dapp_bridge.rs  dapp_commands.rs  desktop_commands.rs  desktop_relay.rs  handlers.rs  invoke.rs  lib.rs  quantum_commands.rs  security_commands.rs  state.rs  update.rs  update_android.rs  update_commands.rs  update_download.rs  update_tests.rs  whisper_commands.rs
crates/wallet-tauri-common/tests/: acl_inventory.rs  android_native_inventory.rs
docs/: COMMUNITY-HANDOFF.md  HUB-OPERATOR.md  RELEASING.md  hacash-quantum-wallet-design-summary.md  hacash-quantum-wallet-design.md
releases/: README.md  build-desktop-v0122.bat  build-mobile-v0122.bat  build-mobile-v0124-continue.bat  build-mobile-v0124.bat  build-mobile-v0127.bat  build-v0124b.bat  copy-desktop-v0137.ps1  copy-desktop-v0138.ps1  gradle-mobile-v0122.bat  gradle-v0127.bat  publish-v0116-mobile.bat  publish-v0117-desktop.bat  publish-v0117-mobile.bat  publish-v0118-desktop.bat  publish-v0118-mobile.bat  publish-v0119-desktop.bat  publish-v0119-mobile.bat  publish-v0120-desktop.bat  publish-v0120-mobile.bat  publish-v0122-desktop.bat  publish-v0122-mobile.bat  publish-v0123-mobile.bat  publish-v0124-mobile.bat  publish-v0125-mobile.bat  publish-v0126-mobile.bat  publish-v0127-mobile.bat  publish-v0128-desktop.bat  publish-v0128-mobile.bat  publish-v0130-desktop.bat  publish-v0130-mobile.bat  v0.1.10-mobile-notes.md  v0.1.11-mobile-notes.md  v0.1.12-desktop-notes.md  v0.1.12-desktop-release-body.md  v0.1.12-mobile-notes.md  v0.1.13-mobile-notes.md  v0.1.14-mobile-notes.md  v0.1.15-mobile-notes.md  v0.1.16-desktop-notes.md  (+40 more)
scripts/: DEV-MOBILE.bat  START-DEV-STACK.bat  checkout-fullnode.ps1  release-artifacts.mjs  release-version.mjs  switch-node-profile.ps1  whisper-privacy-demo.ps1
(+524 files in other folders)
