[workspace]
resolver = "2"
members = ["crates/wallet-core", "apps/desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
tracing = "0.1"
base64 = "0.22"
sha2 = "0.10"
url = "2"