[workspace]
resolver = "2"
members = [
    "crates/dust-whisper",
    "crates/l2-fast-pay-hub",
    "crates/wallet-core",
    "crates/wallet-tauri-common",
    "apps/desktop/src-tauri",
    "apps/mobile/src-tauri",
]

[workspace.package]
version = "0.1.52"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
tracing = "0.1"
base64 = "0.22"
sha2 = "0.10"
url = "2"
p256 = { version = "0.13", features = ["ecdsa"] }
coset = "0.3"
proptest = "1"
secp256k1 = "0.31.1"
tempfile = "3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
