[package]
name = "hacash-wallet-core"
version.workspace = true
edition.workspace = true
description = "Secure Hacash wallet core: vault, signing, L1/L2 payment routing"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
zeroize.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
rand.workspace = true
hex.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true
base64.workspace = true
sha2.workspace = true
url.workspace = true
p256.workspace = true
coset.workspace = true
dust-whisper = { path = "../dust-whisper" }
sys = { path = "../../../hacash-fullnodedev/sys" }
field = { path = "../../../hacash-fullnodedev/field" }
basis = { path = "../../../hacash-fullnodedev/basis" }
protocol = { path = "../../../hacash-fullnodedev/protocol" }
sdk = { path = "../../../hacash-fullnodedev/sdk" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Memory"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = { workspace = true }
tempfile = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }