[package]
name = "wallet-tauri-common"
version.workspace = true
edition.workspace = true
description = "Shared Tauri IPC commands for Hacash Wallet (desktop + mobile)"
license.workspace = true

[dependencies]
hacash-wallet-core = { path = "../wallet-core" }
tauri = { version = "2", features = ["unstable"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zeroize.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { workspace = true }
dust-whisper = { path = "../dust-whisper", optional = true }

sha2.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
desktop = ["dep:dust-whisper"]
desktop-platform = []
