[package]
name = "hacash-wallet"
version.workspace = true
edition.workspace = true
description = "Hacash Wallet — secure desktop app"

[lib]
name = "hacash_wallet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hacash-wallet-core = { path = "../../../crates/wallet-core" }
wallet-tauri-common = { path = "../../../crates/wallet-tauri-common", features = ["desktop"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Security_Credentials_UI",
    "Foundation",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
