[package]
name = "hacash-wallet-mobile"
version.workspace = true
edition.workspace = true
description = "Hacash Wallet — mobile shell (Android/iOS via Tauri 2)"

[lib]
name = "hacash_wallet_mobile_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hacash-wallet-core = { path = "../../../crates/wallet-core" }
wallet-tauri-common = { path = "../../../crates/wallet-tauri-common" }
tauri = { version = "2", features = ["unstable"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Security_Credentials_UI",
    "Foundation",
] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
